--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,44 @@ body {
   align-content: center;
 }
 
+/* Contact Page */
+
+.contact-body {
+  margin-top: 50px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding: 3em;
+
+}
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 600px;
+  background-color: #717C92 ;
+  opacity: .9;
+  border-radius: 20px;
+}
+
+.contact-grid h2 {
+  font-family: 'Oxygen', sans-serif;
+}
+
+.contact-grid p {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+}
+
+.contact-grid hr {
+  border-top: 5px solid black;
+  opacity: 0.7; 
+}
+
+.contact-grid i {
+  font-size: 40px;
+  padding-right: 30px;
+  
+}
+/*Contact Page*/
