--- a/src/App.css
+++ b/src/App.css
@@ -107,4 +107,26 @@ body {
   padding-right: 30px;
   
 }
+
 /*Contact Page*/
+
+/*About Page*/
+
+.about-right-col {
+  background-color: rgb(0,0,0,.3);
+  color: black;
+  border-radius: 5px;
+  padding: 2em;
+}
+
+.about-body {
+  margin-top: 30px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding: 3em;
+
+}
+
+/*About Page*/
